--- a/src/components/Sbs.astro
+++ b/src/components/Sbs.astro
@@ -46,14 +46,14 @@
         <!-- Left Image Section -->
         <div class="cs-image-group">
             <picture class="cs-picture cs-picture1">
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/lawyers-m.jpg">
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/lawyers.jpg">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/lawyers.jpg" alt="lawyers" width="522" height="581" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/sbs1.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/sbs1.jpg">
+                <img loading="lazy" decoding="async" src="/assets/sbs1.jpg" alt="lawyers" width="522" height="581" aria-hidden="true">
             </picture>
             <picture class="cs-picture cs-picture2">
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/gavel-m.jpg">
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/gavel.jpg">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/gavel.jpg" alt="gavel" width="414" height="400" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/sbs2.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/sbs2.jpg">
+                <img loading="lazy" decoding="async" src="/assets/sbs2.jpg" alt="gavel" width="414" height="400" aria-hidden="true">
             </picture>
         </div>
         <!-- Right Content Section-->
@@ -117,44 +117,6 @@
     #RPsbs-313 .cs-text:last-of-type,
     #RPsbsr-313 .cs-text:last-of-type {
         margin-bottom: 2rem;
-    }
-    #RPsbs-313 .cs-button-solid,
-    #RPsbsr-313 .cs-button-solid {
-        font-size: 1rem;
-        /* 46px - 56px */
-        line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-        text-decoration: none;
-        font-weight: 700;
-        text-align: center;
-        margin: 0;
-        color: #fff;
-        min-width: 9.375rem;
-        padding: 0 1.5rem;
-        background-color: var(--primary);
-        border-radius: 0.25rem;
-        display: inline-block;
-        position: relative;
-        z-index: 1;
-        /* prevents padding from adding to the width */
-        box-sizing: border-box;
-    }
-    #RPsbs-313 .cs-button-solid:before,
-    #RPsbsr-313 .cs-button-solid:before {
-        content: "";
-        position: absolute;
-        height: 100%;
-        width: 0%;
-        background: #000;
-        opacity: 1;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        border-radius: 0.25rem;
-        transition: width 0.3s;
-    }
-    #RPsbs-313 .cs-button-solid:hover:before,
-    #RPsbsr-313 .cs-button-solid:hover:before {
-        width: 100%;
     }
     #RPsbs-313 .cs-quote,
     #RPsbsr-313 .cs-quote {
