--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -54,7 +54,7 @@ const { title } = Astro.props;
     --primary: #d7b15c;
     --primaryLight: #d7b978;
     --secondary: #580100;
-    --secondaryLight: #800b09;
+    --secondaryLight: #d7b15c;
     --headerColor: #1a1a1a;
     --bodyTextColor: #4e4b66;
     --bodyTextColorWhite: #fafbfc;
@@ -97,27 +97,26 @@ body {
     box-sizing: border-box;
 }
 .cs-button-solid {
-  font-size: 1rem;
+        font-size: 1rem;
         /* 46px - 56px */
         line-height: clamp(2.875rem, 5.5vw, 3.5rem);
         text-decoration: none;
         font-weight: 700;
         text-align: center;
         margin: 0;
-        color: #1a1a1a;
+        color: #fff;
         min-width: 9.375rem;
         padding: 0 1.5rem;
-        background-color: var(--bodyTextColorWhite);
+        background-color: var(--primary);
         border-radius: 0.25rem;
         display: inline-block;
         position: relative;
         z-index: 1;
         /* prevents padding from adding to the width */
         box-sizing: border-box;
-        transition: color 0.3s;
-}
+    }
 .cs-button-solid:before {
-  content: "";
+        content: "";
         position: absolute;
         height: 100%;
         width: 0%;
@@ -128,13 +127,10 @@ body {
         z-index: -1;
         border-radius: 0.25rem;
         transition: width 0.3s;
-}
-.cs-button-solid:hover {
-  color: #fff;
-}
+    }
 .cs-button-solid:hover:before {
-  width: 100%;
-}
+        width: 100%;
+    }
 .cs-topper {
     font-size: var(--topperFontSize);
     line-height: 1.2em;
