--- a/src/components/About/AboutPage.astro
+++ b/src/components/About/AboutPage.astro
@@ -6,8 +6,8 @@
     <div class="cs-container">
         <span class="cs-int-title">About Us</span>
         <div class="cs-breadcrumbs">
-            <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link cs-active">About Us</a>
+            <a href="/" class="cs-link">Home</a>
+            <a href="/about/" class="cs-link cs-active">About Us</a>
         </div>
     </div>
     <!--Background Image-->
@@ -66,14 +66,14 @@
         <!-- Left Image Section -->
         <div class="cs-image-group">
             <picture class="cs-picture cs-picture1">
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/lawyers-m.jpg">
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/lawyers.jpg">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/lawyers.jpg" alt="lawyers" width="522" height="581" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/sbs1.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/sbs1.jpg">
+                <img loading="lazy" decoding="async" src="/assets/sbs1.jpg" alt="lawyers" width="522" height="581" aria-hidden="true">
             </picture>
             <picture class="cs-picture cs-picture2">
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/gavel-m.jpg">
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/gavel.jpg">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/gavel.jpg" alt="gavel" width="414" height="400" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/sbs2.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/sbs2.jpg">
+                <img loading="lazy" decoding="async" src="/assets/sbs2.jpg" alt="gavel" width="414" height="400" aria-hidden="true">
             </picture>
         </div>
         <!-- Right Content Section-->
@@ -282,77 +282,6 @@
     </div>
 </section>
                                 
-<!-- ============================================ -->
-<!--                   Contact                    -->
-<!-- ============================================ -->
-
-<section id="AboutContact-328">
-    <div class="cs-container">
-        <div class="cs-content">
-            <span class="cs-topper">Contact Us</span>
-            <h2 class="cs-title">We Are Always Ready To Hear For You.</h2>
-            <!--Form-->
-            <form class="cs-form" id="cs-form-321-328" name="Contact Form" method="post">
-                <label class="cs-label">
-                    Name
-                    <input class="cs-input" required type="text" id="name-321-328" name="name" placeholder="Name">
-                </label>
-                <label class="cs-label cs-email">
-                    Email
-                    <input class="cs-input" required type="text" id="email-321-328" name="email" placeholder="Email">
-                </label>
-                <label class="cs-label cs-phone">
-                    Phone
-                    <input class="cs-input" required type="text" id="phone-321-328" name="phone" placeholder="Phone">
-                </label>
-                <label class="cs-label">
-                    Message
-                    <textarea class="cs-input cs-textarea" required name="Message" id="message-321-328" placeholder="Write message..."></textarea>
-                </label>
-                <button class="cs-button-solid cs-submit" type="submit">Make an Appointment</button>
-            </form>
-        </div>
-        <div class="cs-right">
-            <!--Map Image, pin is made in the CSS-->
-            <picture class="cs-map">
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/map.png">
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/map.png">
-                <img decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/map.png" alt="map" width="610" height="425" aria-hidden="true">
-            </picture>
-            <ul class="cs-contact-group">
-                <li class="cs-item">
-                    <span class="cs-header">
-                        <img class="cs-icon" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/phone-gold.svg" alt="icon" width="20" height="20">
-                        Phone
-                    </span>
-                    <a href="tel:555-456 7899" class="cs-link">(555) 456 7899</a>
-                    <a href="tel:555-456 7899" class="cs-link">(555) 456 7898</a>
-                </li>
-                <li class="cs-item">
-                    <span class="cs-header">
-                        <img class="cs-icon" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/pin-gold.svg" alt="icon" width="20" height="20">
-                        Address
-                    </span>
-                    <a href="" class="cs-link">121 Fake St, Melbourne<br> VIC 300, Australia</a>
-                </li>
-                <li class="cs-item">
-                    <span class="cs-header">
-                        <img class="cs-icon" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/clock-gold.svg" alt="icon" width="20" height="20">
-                        Our Hours
-                    </span>
-                    <span class="cs-link">Monday To Saturday</span>
-                    <span class="cs-link">9:00 AM - 10:30 PM</span>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <!--background image-->
-    <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/round-table-m.jpg">
-        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/round-table.jpg">
-        <img decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/round-table.jpg" alt="round table" width="275" height="132" aria-hidden="true">
-    </picture>
-</section>
                                 
 <style>
     body.dark-mode .cs-button-solid {
@@ -1090,266 +1019,6 @@ body.dark-mode .cs-button-solid:before {
     }
 }
 
-/*-- -------------------------- -->
-<---          Contact           -->
-<--- -------------------------- -*/
-
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-    #AboutContact-328 {
-        padding: var(--sectionPadding);
-        position: relative;
-        z-index: 1;
-    }
-    #AboutContact-328 .cs-container {
-        width: 100%;
-        /* changes to 1280px at desktop */
-        max-width: 34.375rem;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 3.25rem;
-    }
-    #AboutContact-328 .cs-topper {
-        color: var(--secondaryLight);
-    }
-    #AboutContact-328 .cs-title {
-        color: var(--bodyTextColorWhite);
-    }
-    #AboutContact-328 .cs-content {
-        text-align: left;
-    }
-    #AboutContact-328 .cs-form {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        align-items: center;
-        gap: 0.75rem;
-    }
-    #AboutContact-328 .cs-label {
-        /* 14px - 16px */
-        font-size: clamp(0.875rem, 1.5vw, 1rem);
-        width: 100%;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 0.25rem;
-    }
-    #AboutContact-328 .cs-input {
-        font-size: 1rem;
-        width: 100%;
-        height: 3.5rem;
-        padding: 0;
-        padding-left: 1.5rem;
-        border-radius: 0.5rem;
-        color: #fff;
-        background: rgba(255, 255, 255, 0.12);
-        backdrop-filter: blur(15px);
-        border: none;
-        /* prevents padding from adding to height and width */
-        box-sizing: border-box;
-    }
-    #AboutContact-328 .cs-input::placeholder {
-        color: #f7f7f7;
-        opacity: 0.5;
-    }
-    #AboutContact-328 .cs-textarea {
-        min-height: 7.5rem;
-        padding-top: 1.5rem;
-        margin-bottom: 0.75rem;
-        font-family: inherit;
-    }
-    #AboutContact-328 .cs-submit {
-        width: 17.6875rem;
-        text-transform: uppercase;
-        color: var(--headerColor);
-        background-color: var(--secondaryLight);
-        border: none;
-        transition: color 0.3s;
-    }
-    #AboutContact-328 .cs-submit:hover {
-        cursor: pointer;
-    }
-    #AboutContact-328 .cs-right {
-        width: 100%;
-        /* 16px - 24px */
-        padding: clamp(1rem, 3.5vw, 1.5rem);
-        border-radius: 1.5rem;
-        background-color: rgba(255, 255, 255, 0.12);
-        -webkit-backdrop-filter: blur(15px);
-        backdrop-filter: blur(15px);
-        display: flex;
-        /* prevents padding from adding to height and width */
-        box-sizing: border-box;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        /* 24px - 32px */
-        gap: clamp(1.5rem, 4vw, 2rem);
-    }
-    #AboutContact-328 .cs-map {
-        width: 100%;
-        /* 300px - 425px */
-        height: clamp(18.75rem, 63.4vw, 26.5625rem);
-        border-radius: 1.5rem;
-        /* clips the corners of the img tag */
-        overflow: hidden;
-        position: relative;
-        display: block;
-    }
-    #AboutContact-328 .cs-map:before {
-        content: "";
-        position: absolute;
-        display: block;
-        /* 32px - 48px */
-        width: clamp(2rem, 4vw, 3rem);
-        height: clamp(2rem, 4vw, 3rem);
-        background: url("https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/pin-red.svg");
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        opacity: 1;
-        /* 148px - 220px */
-        top: clamp(9.25rem, 30.7vw, 13.75rem);
-        /* push to the center line of the div */
-        left: 50%;
-        /* push X amount of pixels from it's current position off the center line */
-        margin-left: 0.625rem;
-        z-index: 10;
-    }
-    #AboutContact-328 .cs-map img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-    #AboutContact-328 .cs-contact-group {
-        padding: 0;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        flex-direction: column;
-        gap: 1rem;
-    }
-    #AboutContact-328 .cs-item {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-    }
-    #AboutContact-328 .cs-header {
-        font-size: 1.25rem;
-        line-height: 1.2em;
-        font-weight: 700;
-        margin-bottom: 0.75rem;
-        color: var(--secondaryLight);
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 0.25rem;
-    }
-    #AboutContact-328 .cs-link {
-        /* 14px - 16px */
-        font-size: clamp(0.875rem, 1.5vw, 1rem);
-        line-height: 1.5em;
-        text-decoration: none;
-        color: var(--bodyTextColorWhite);
-        transition: color 0.3s;
-    }
-    #AboutContact-328 .cs-link:hover {
-        color: var(--secondary);
-    }
-    #AboutContact-328 .cs-background {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: block;
-        z-index: -1;
-    }
-    #AboutContact-328 .cs-background:before {
-        /* top right box */
-        content: "";
-        width: 100%;
-        height: 100%;
-        background: var(--primary);
-        opacity: 0.92;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        z-index: 1;
-    }
-    #AboutContact-328 .cs-background img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-}
-/* Tablet - 650px */
-@media only screen and (min-width: 40.625rem) {
-    #AboutContact-328 .cs-contact-group {
-        width: 100%;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-}
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-    #AboutContact-328 .cs-container {
-        max-width: 80rem;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 3.25rem;
-    }
-    #AboutContact-328 .cs-content {
-        max-width: 32.625rem;
-    }
-    #AboutContact-328 .cs-title,
-    #AboutContact-328 .cs-topper {
-        text-align: left;
-        margin-left: 0;
-    }
-    #AboutContact-328 .cs-title {
-        max-width: 32.625rem;
-    }
-    #AboutContact-328 .cs-email,
-    #AboutContact-328 .cs-phone {
-        width: 48%;
-    }
-    #AboutContact-328 .cs-button-solid {
-        margin-left: 0;
-    }
-    #AboutContact-328 .cs-right {
-        width: 51.6%;
-        max-width: 41.125rem;
-        /* prevent flexbox from squishing it */
-        flex: none;
-    }
-}
-/* Desktop - 1300px - Parallax Effect */
-@media only screen and (min-width: 81.25rem) {
-    #AboutContact-328 {
-        background: url("https://csimg.nyc3.digitaloceanspaces.com/Contact-Page/round-table.jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        /* makes parallax effect */
-        background-attachment: fixed;
-    }
-}
 
                                 
 </style>
