--- a/src/components/Contact/ContactPage.astro
+++ b/src/components/Contact/ContactPage.astro
@@ -4,17 +4,17 @@
 
 <div id="ContactBanner-327">
     <div class="cs-container">
-        <span class="cs-int-title">About Us</span>
+        <span class="cs-int-title">Contact Us</span>
         <div class="cs-breadcrumbs">
-            <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link cs-active">ContactUs</a>
+            <a href="/" class="cs-link">Home</a>
+            <a href="/contact/" class="cs-link cs-active">Contact Us</a>
         </div>
     </div>
     <!--Background Image-->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Banners/library-m.jpg">
-        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/Banners/library.jpg">
-        <img aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Banners/library.jpg" alt="library" width="1920" height="375">
+        <source media="(max-width: 600px)" srcset="/assets/contact.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/contact.jpg">
+        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/contact.jpg" alt="library" width="1920" height="375">
     </picture>
 </div>
                           
@@ -165,32 +165,6 @@
             </ul>
         </div>
     </div>
-</section>
-          
-<!-- ============================================ -->
-<!--                  Subscribe                   -->
-<!-- ============================================ -->
-
-<section id="ContactSubscribe-327">
-    <div class="cs-container">
-        <div class="cs-content">
-            <span class="cs-topper">Subscribe</span>
-            <h2 class="cs-title">Subscribe Your Email for Newsletter & Promotion</h2>
-            <p class="cs-text">
-                Nulla dig nissimmi quis neque interdum. An Ohio man allegedly punched his lawyer in the face in court Tuesday upon finding out he was sentenced.
-            </p>
-            <form class="cs-form" name="Contact Form" method="post">
-                <input class="cs-input" type="email" id="cs-email-302-327" name="find-us" placeholder="Email Address">
-                <button class="cs-button-solid cs-submit" type="submit">Subscribe Now</button>
-            </form>
-        </div>
-    </div>
-    <!--Background Image-->
-    <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/CTA/scale-m.jpg">
-        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/CTA/scale.jpg">
-        <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/CTA/scale.jpg" alt="scale" width="1920" height="486" aria-hidden="true">
-    </picture>
 </section>
                                 
 <style>
@@ -415,8 +389,6 @@ body.dark-mode .cs-button-solid:before {
     #ContactForm-327 .cs-submit {
         text-transform: uppercase;
         width: 17.6875rem;
-        background-color: var(--secondaryLight);
-        color: var(--headerColor);
         border: none;
         transition: color 0.3s;
     }
@@ -720,165 +692,6 @@ body.dark-mode .cs-button-solid:before {
         transition:
             opacity 0.3s,
             padding-bottom 0.3s;
-    }
-}
-
-/*-- -------------------------- -->
-<---            CTA             -->
-<--- -------------------------- -*/
-
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-    #ContactSubscribe-327 {
-        padding: var(--sectionPadding);
-        position: relative;
-        z-index: 1;
-    }
-    #ContactSubscribe-327 .cs-container {
-        width: 100%;
-        /* changes to 1280px at tablet */
-        max-width: 34.375rem;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /* 48px - 64px */
-        gap: clamp(3rem, 6vw, 4rem);
-    }
-    #ContactSubscribe-327 .cs-content {
-        /* set text align to left if content needs to be left aligned */
-        text-align: center;
-        width: 100%;
-        max-width: 39.375rem;
-        display: flex;
-        flex-direction: column;
-        /* centers content horizontally, set to flex-start to left align */
-        align-items: center;
-    }
-
-    #ContactSubscribe-327 .cs-title {
-        font-size: var(--headerFontSize);
-        font-weight: 900;
-        line-height: 1.2em;
-        text-align: inherit;
-        max-width: 43.75rem;
-        margin: 0 0 1rem 0;
-        color: var(--headerColor);
-        position: relative;
-    }
-    #ContactSubscribe-327 .cs-text {
-        font-size: var(--bodyFontSize);
-        line-height: 1.5em;
-        text-align: inherit;
-        width: 100%;
-        max-width: 40.625rem;
-        margin: 0;
-        color: var(--bodyTextColor);
-    }
-    #ContactSubscribe-327 .cs-topper {
-        color: var(--secondaryLight);
-    }
-    #ContactSubscribe-327 .cs-title {
-        max-width: 20ch;
-        color: var(--bodyTextColorWhite);
-    }
-    #ContactSubscribe-327 .cs-text {
-        margin: 0 0 2rem 0;
-        color: var(--bodyTextColorWhite);
-    }
-    #ContactSubscribe-327 .cs-form {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-    }
-    #ContactSubscribe-327 .cs-input {
-        font-size: 1rem;
-        width: 100%;
-        height: clamp(2.875rem, 5.5vw, 3.5rem);
-        margin: 0;
-        padding: 0;
-        padding-left: 1.25rem;
-        border: none;
-        border-radius: 0.25rem;
-        /* prevents padding from adding to width and height */
-        box-sizing: border-box;
-        display: block;
-    }
-    #ContactSubscribe-327 .cs-input::placeholder {
-        color: #767676;
-    }
-    #ContactSubscribe-327 .cs-submit {
-        width: 100%;
-        color: var(--headerColor);
-        background-color: var(--secondaryLight);
-        border: none;
-    }
-    #ContactSubscribe-327 .cs-submit:hover {
-        cursor: pointer;
-    }
-    #ContactSubscribe-327 .cs-submit:before {
-        background-color: #fff;
-    }
-    #ContactSubscribe-327 .cs-background {
-        width: 100%;
-        height: 100%;
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-    }
-    #ContactSubscribe-327 .cs-background:before {
-        /* black overlay */
-        content: "";
-        width: 100%;
-        height: 100%;
-        background: #000;
-        opacity: 0.6;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        z-index: 1;
-    }
-    #ContactSubscribe-327 .cs-background img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-}
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-    #ContactSubscribe-327 .cs-container {
-        max-width: 80rem;
-    }
-    #ContactSubscribe-327 .cs-form {
-        flex-direction: row;
-    }
-    #ContactSubscribe-327 .cs-input {
-        width: 22.5rem;
-    }
-    #ContactSubscribe-327 .cs-submit {
-        width: 13.875rem;
-    }
-}
-/* Large Desktop 1300px - Parallax Scroll */
-@media only screen and (min-width: 81.25rem) {
-    #ContactSubscribe-327 {
-        background: url("https://csimg.nyc3.digitaloceanspaces.com/CTA/scale.jpg");
-        background-size: cover;
-        background-position: center 20%;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-    #ContactSubscribe-327 .cs-background img {
-        display: none;
     }
 }
                                 
