--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -117,46 +117,11 @@
         margin-bottom: 0.75rem;
         font-family: inherit;
     }
-    #contact-323 .cs-button-solid {
-        font-size: 1rem;
-        /* 46px - 56px */
-        line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-        text-decoration: none;
-        font-weight: 700;
-        text-align: center;
-        margin: 0;
-        color: #fff;
-        min-width: 9.375rem;
-        padding: 0 1.5rem;
-        background-color: var(--primary);
-        border-radius: 0.25rem;
-        display: inline-block;
-        position: relative;
-        z-index: 1;
-        /* prevents padding from adding to the width */
-        box-sizing: border-box;
-    }
-    #contact-323 .cs-button-solid:before {
-        content: "";
-        position: absolute;
-        height: 100%;
-        width: 0%;
-        background: #000;
-        opacity: 1;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        border-radius: 0.25rem;
-        transition: width 0.3s;
-    }
-    #contact-323 .cs-button-solid:hover:before {
-        width: 100%;
-    }
     #contact-323 .cs-submit {
         text-transform: uppercase;
         width: 17.6875rem;
-        background-color: var(--secondaryLight);
-        color: var(--headerColor);
+        /* background-color: var(--secondaryLight); */
+        /* color: var(--headerColor); */
         border: none;
         transition: color 0.3s;
     }
