--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -38,9 +38,9 @@
 
     <!-- Background Image -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting-2-m.jpeg">
-        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting-2.jpeg">
-        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting-2.jpeg" alt="meeting" width="1920" height="1200" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/hero.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/hero.jpg">
+        <img loading="lazy" decoding="async" src="/assets/hero.jpg" alt="meeting" width="1920" height="1200" aria-hidden="true">
     </picture>
 </section>
                                 
@@ -207,39 +207,6 @@
     margin-bottom: 2rem;
     color: #fff;
   }
-  #hero-1617 .cs-button-solid {
-    font-size: 1rem;
-    /* 46px - 56px */
-    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-    text-decoration: none;
-    font-weight: 700;
-    text-align: center;
-    margin: 0;
-    color: #1a1a1a;
-    min-width: 12.5rem;
-    padding: 0 1.5rem;
-    background-color: var(--primary);
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    /* prevents padding from adding to the width */
-    box-sizing: border-box;
-  }
-  #hero-1617 .cs-button-solid:before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 0%;
-    background: #fff;
-    opacity: 1;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: width 0.3s;
-  }
-  #hero-1617 .cs-button-solid:hover:before {
-    width: 100%;
-  }
   #hero-1617 .cs-background {
     width: 100%;
     height: 100%;
@@ -276,7 +243,7 @@
 /* Large Desktop - Parallax Effect - 1600px */
 @media only screen and (min-width: 100rem) {
   #hero-1617 {
-    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting-2.jpeg");
+    background: url("/assets/hero.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
