--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
     <div class="cs-container">
         <!-- Logo Group -->
         <div class="cs-logo-group">
-            <a aria-label="go back to home" class="cs-logo" href="">
+            <a aria-label="go back to home" class="cs-logo" href="/">
                 <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Footer/stitch-law.svg" alt="logo" width="178" height="32">
             </a>
             <p class="cs-text">
@@ -18,33 +18,36 @@
                 <span class="cs-header">Sitemap</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">About</a>
+                <a class="cs-nav-link" href="/">Home</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Services</a>
+                <a class="cs-nav-link" href="/about/">About</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Portfolio</a>
+                <a class="cs-nav-link" href="/pricing/">Pricing</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Contact</a>
+                <a class="cs-nav-link" href="/contact/">Contact</a>
             </li>
         </ul>
         <ul class="cs-nav">
             <li class="cs-nav-li">
-                <span class="cs-header">Categories</span>
+                <span class="cs-header">Services</span>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Business Law</a>
+                <a class="cs-nav-link" href="">Legal Consultation</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Education Law</a>
+                <a class="cs-nav-link" href="">Document Preparation</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Insurance Defense</a>
+                <a class="cs-nav-link" href="">Court Representation</a>
             </li>
             <li class="cs-nav-li">
-                <a class="cs-nav-link" href="">Family Law</a>
+                <a class="cs-nav-link" href="">Mediation Services</a>
+            </li>
+            <li class="cs-nav-li">
+                <a class="cs-nav-link" href="">Compliance Advice</a>
             </li>
         </ul>
         <!-- Contact Info -->
@@ -69,7 +72,7 @@
         </ul>
     </div>
     <div class="cs-bottom">
-        <span class="cs-copyright">© Copyright 2022 - <a class="cs-copyright-link" href="">Stitch Law Design</a></span>
+        <span class="cs-copyright">© Copyright 2024 - <a class="cs-copyright-link" target="_blank" href="https://studiofeniks.eu/">Studio Feniks</a></span>
     </div>
 </footer>
                                 
