--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -30,7 +30,7 @@
     </div>
     <div class="cs-container">
         <!--Nav Logo-->
-        <a href="" class="cs-logo" aria-label="back to home">
+        <a href="/" class="cs-logo" aria-label="back to home">
             <img src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Logos/consulting-logo.svg" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
@@ -769,7 +769,7 @@
   }
   #cs-navigation .cs-li-link {
     /* 14px - 16px */
-    font-size: clamp(0.875rem, 1.3vw, 1rem);
+    font-size: clamp(0.875rem, 1.3vw, 1.2rem);
     line-height: 1.5em;
     text-decoration: none;
     margin: 0;
