--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -66,21 +66,39 @@ const { title } = Astro.props;
     /* 60px - 100px top and bottom */
     --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
 }
-/* playfair-display-italic - latin_latin-ext */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Playfair Display';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/playfair-display-v37-latin_latin-ext-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-}
-/* playfair-display-700 - latin_latin-ext */
+
+/* playfair-display-700 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
   font-family: 'Playfair Display';
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/playfair-display-v37-latin_latin-ext-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url('../fonts/playfair-display-v37-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* playfair-display-900 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/playfair-display-v37-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* dm-sans-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/dm-sans-v15-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* dm-sans-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/dm-sans-v15-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 html {
@@ -90,6 +108,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Dm Sans';
 }
 
 *, *:before, *:after {
@@ -114,6 +133,7 @@ body {
         z-index: 1;
         /* prevents padding from adding to the width */
         box-sizing: border-box;
+        font-family: 'Playfair Display';
     }
 .cs-button-solid:before {
         content: "";
@@ -141,6 +161,7 @@ body {
     color: var(--primary);
     margin-bottom: 0.25rem;
     display: block;
+    font-family: 'Playfair Display';
 }
 
 .cs-title {
@@ -152,8 +173,11 @@ body {
     margin: 0 0 1rem 0;
     color: var(--headerColor);
     position: relative;
+    font-family: 'Playfair Display';
 }
-
+.cs-int-title {
+  font-family: 'Playfair Display';
+}
 .cs-text {
     font-size: var(--bodyFontSize);
     line-height: 1.5em;
@@ -162,5 +186,8 @@ body {
     max-width: 40.625rem;
     margin: 0;
     color: var(--bodyTextColor);
+}
+.cs-li-link {
+  /* font-family: 'Playfair Display'; */
 }
 </style>
